--- a/package.json
+++ b/package.json
@@ -12,16 +12,30 @@
     "lint:fix": "yarn run eslint ./src --fix"
   },
   "dependencies": {
-    "koa": "^2.13.1"
+    "@koa/router": "^10.1.1",
+    "client-oauth2": "^4.3.3",
+    "http-errors": "^1.8.0",
+    "jsonwebtoken": "^8.5.1",
+    "koa": "^2.13.1",
+    "koa-session": "^6.2.0",
+    "uuid": "^7.0.0"
   },
   "devDependencies": {
+    "@types/http-errors": "^1",
+    "@types/jsonwebtoken": "^8",
     "@types/koa": "^2",
+    "@types/koa-session": "^5.10.4",
+    "@types/koa__router": "^8.0.7",
     "@types/node": "^14.15.0",
+    "@types/uuid": "^8",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "@typescript-eslint/parser": "^4.29.3",
     "eslint": "^7.32.0",
     "ts-node": "^10.2.1",
     "ts-node-dev": "^1.1.8",
     "typescript": "~4.3.5"
+  },
+  "resolutions": {
+    "uuid": "^7.0.0"
   }
 }
