(backend) Move backend into its own yarn workspace
Fix #7

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,9 +1,11 @@
 *
+
 !.yarn/plugins
 !.yarn/releases
 !.yarn/sdks
-!src/
 !.yarnrc.yml
+!yarn.lock
+
+!packages/**/*
 !package.json
 !tsconfig.json
-!yarn.lock
