--- a/package.json
+++ b/package.json
@@ -1,44 +1,13 @@
 {
   "name": "ping-board",
   "version": "1.0.0",
-  "main": "src/index.js",
   "license": "MIT",
-  "scripts": {
-    "build": "yarn tsc --build",
-    "clean": "yarn tsc --build --clean",
-    "start": "NODE_ENV=production yarn node --enable-source-maps ./dist/index.js",
-    "dev": "NODE_ENV=development yarn ts-node-dev --inspect --files ./src/index.ts",
-    "lint": "yarn run eslint ./src",
-    "lint:fix": "yarn run eslint ./src --fix",
-    "migrate:latest": "knex migrate:latest",
-    "migrate:up": "knex migrate:up",
-    "migrate:down": "knex migrate:down",
-    "seed": "knex seed:run"
-  },
-  "dependencies": {
-    "@koa/router": "^10.1.1",
-    "client-oauth2": "^4.3.3",
-    "http-errors": "^1.8.0",
-    "jsonwebtoken": "^8.5.1",
-    "knex": "^0.95.10",
-    "koa": "^2.13.1",
-    "mysql2": "^2.3.0",
-    "node-fetch": "^2.6.1",
-    "uuid": "^8.3.2"
-  },
+  "workspaces": [
+    "packages/*"
+  ],
   "devDependencies": {
-    "@types/http-errors": "^1",
-    "@types/jsonwebtoken": "^8",
-    "@types/koa": "^2",
-    "@types/koa__router": "^8.0.7",
-    "@types/node": "^14.15.0",
-    "@types/node-fetch": "^2",
-    "@types/uuid": "^8",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "@typescript-eslint/parser": "^4.29.3",
-    "eslint": "^7.32.0",
-    "ts-node": "^10.2.1",
-    "ts-node-dev": "^1.1.8",
     "typescript": "~4.3.5"
   }
 }
