--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,13 +5,6 @@
     "removeComments": false,
     "sourceMap": true,
     "strict": true,
-    "esModuleInterop": true,
-    "target": "ES2020",
-    "module": "CommonJS",
-    "lib": ["ES2020"],
-    "outDir": "dist"
-  },
-  "include": [
-    "src/**/*"
-  ]
+    "esModuleInterop": true
+  }
 }
