(frontend) Add Dockerfile for building and serving the React frontend
Fix #13

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -5,3 +5,10 @@ plugins:
     spec: "@yarnpkg/plugin-workspace-tools"
 
 yarnPath: .yarn/releases/yarn-berry.cjs
+
+packageExtensions:
+  react-scripts@*:
+    dependencies:
+      "sass-loader": "*"
+    peerDependencies:
+      "sass": "*"
