(docker) Define COOKIE_KEY and DB_URL for the frontend in docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,8 +29,8 @@ services:
       dockerfile: ./packages/backend/Dockerfile
     environment:
       NODE_ENV: "production"
-      COOKIE_KEY:
-      DB_URL:
+      COOKIE_KEY: "change me in production!"
+      DB_URL: "mysql://pingboard:pingboard@localhost/pingboard"
       SSO_CLIENT_ID:
       SSO_CLIENT_SECRET:
       SSO_REDIRECT_URI: "http://localhost:3000/auth/callback"
