(backend/common) Introduce UserRoles
Fix #15

--- a/packages/backend/Dockerfile
+++ b/packages/backend/Dockerfile
@@ -6,8 +6,10 @@ WORKDIR /app
 COPY .yarnrc.yml ./
 COPY .yarn ./.yarn
 COPY tsconfig.json ./
+COPY packages/common/tsconfig.json ./packages/common/
 COPY packages/backend/tsconfig.json ./packages/backend/
 COPY package.json ./
+COPY packages/common/package.json ./packages/common/
 COPY packages/backend/package.json ./packages/backend/
 COPY yarn.lock ./
 # Install all dependencies (including devDependencies)
@@ -15,6 +17,7 @@ RUN yarn install
 # The source code is copied after installing the dependencies so we don't
 # run the install process every time we change something in the code without
 # touching the dependencies
+COPY packages/common packages/common
 COPY packages/backend packages/backend
 RUN yarn workspace @ping-board/backend build
 
@@ -30,8 +33,10 @@ USER app
 COPY .yarnrc.yml ./
 COPY --chown=app .yarn ./.yarn
 COPY tsconfig.json ./
+COPY packages/common/tsconfig.json ./packages/common/
 COPY packages/backend/tsconfig.json ./packages/backend/
 COPY package.json ./
+COPY packages/common/package.json ./packages/common/
 COPY packages/backend/package.json ./packages/backend/
 COPY yarn.lock ./
 # Only install dependencies used in production (exclude devDependencies)
@@ -39,5 +44,6 @@ RUN yarn workspaces focus --production --all
 # The built application code is copied after installing the dependencies so we
 # don't run the install process every time we change something in the code
 # without touching the dependencies
+COPY --from=build /app/packages/common/build ./packages/common/build
 COPY --from=build /app/packages/backend/build ./packages/backend/build
 CMD ["yarn", "workspace", "@ping-board/backend", "start"]
