--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -8,8 +8,8 @@
     "clean": "yarn tsc --build --clean",
     "start": "NODE_ENV=production yarn node --enable-source-maps ./build/index.js",
     "dev": "NODE_ENV=development yarn ts-node-dev --inspect --files ./src/index.ts",
-    "lint": "yarn run eslint .",
-    "lint:fix": "yarn run eslint . --fix",
+    "lint": "yarn workspace @ping-board/common build && yarn run eslint .",
+    "lint:fix": "yarn lint --fix",
     "migrate:latest": "knex migrate:latest",
     "migrate:up": "knex migrate:up",
     "migrate:down": "knex migrate:down",
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@koa/router": "^10.1.1",
+    "@ping-board/common": "workspace:packages/common",
     "client-oauth2": "^4.3.3",
     "http-errors": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
