--- a/packages/common/tsconfig.json
+++ b/packages/common/tsconfig.json
@@ -5,14 +5,12 @@
     "target": "ES2020",
     "module": "CommonJS",
     "lib": ["ES2020"],
-    "outDir": "build"
+    "outDir": "build",
+    "composite": true,
+    "declaration": true,
+    "declarationMap": true
   },
   "include": [
     "src/**/*"
-  ],
-  "references": [
-    {
-      "path": "../common"
-    }
   ]
 }
