--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -23,18 +23,22 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.10",
     "koa": "^2.13.1",
+    "koa-bodyparser": "^4.3.0",
     "mysql2": "^2.3.0",
     "node-fetch": "^2.6.1",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@types/http-errors": "^1",
     "@types/jsonwebtoken": "^8",
     "@types/koa": "^2",
+    "@types/koa-bodyparser": "^4.3.3",
     "@types/koa__router": "^8.0.7",
     "@types/node": "^14.15.0",
     "@types/node-fetch": "^2",
     "@types/uuid": "^8",
+    "@types/yup": "^0",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "@typescript-eslint/parser": "^4.29.3",
     "eslint": "^7.32.0",
