--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.1",
     "bootstrap": "^5.1.0",
     "react": "^17.0.2",
     "react-bootstrap": "next",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.1"
   },
   "devDependencies": {
@@ -19,6 +21,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-redux": "^7",
     "@types/react-router-dom": "^5",
     "@types/sass": "^1",
     "@types/testing-library__jest-dom": "^5",
