--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.1",
     "bootstrap": "^5.1.0",
+    "dayjs": "^1.10.6",
     "react": "^17.0.2",
     "react-bootstrap": "next",
     "react-dom": "^17.0.2",
