--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/eslint": "^7",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
+    "@typescript-eslint/parser": "^4.29.3",
     "eslint": "^7.32.0",
     "typescript": "^4.1.2"
   }
