(docker) Fix Docker builds failing on clean clone
Docker doesn't care about .dockerignore files in subdirectories, so they were merged into the root .dockerignore.
The Dockerfiles themselves were changed to only install the minimum number of dependencies.
The frontend's build script now also builds the `common` subproject, which is not automatically built.

--- a/.dockerignore
+++ b/.dockerignore
@@ -7,6 +7,26 @@
 !yarn.lock
 
 !.eslintrc.json
-!packages/**/*
 !package.json
 !tsconfig.json
+
+!packages/backend/src
+!packages/backend/.eslintrc.js
+!packages/backend/package.json
+!packages/backend/tsconfig.eslint.json
+!packages/backend/tsconfig.json
+
+!packages/common/src
+!packages/common/.eslintrc.js
+!packages/common/package.json
+!packages/common/tsconfig.eslint.json
+!packages/common/tsconfig.json
+
+!packages/frontend/.docker
+!packages/frontend/public
+!packages/frontend/src
+!packages/frontend/.eslintrc.js
+!packages/frontend/.yarnrc.yml
+!packages/frontend/craco.config.js
+!packages/frontend/package.json
+!packages/frontend/tsconfig.json
