--- a/packages/backend/Dockerfile
+++ b/packages/backend/Dockerfile
@@ -13,7 +13,7 @@ COPY packages/common/package.json ./packages/common/
 COPY packages/backend/package.json ./packages/backend/
 COPY yarn.lock ./
 # Install all dependencies (including devDependencies)
-RUN yarn install
+RUN yarn workspaces focus @ping-board/backend
 # The source code is copied after installing the dependencies so we don't
 # run the install process every time we change something in the code without
 # touching the dependencies
@@ -40,7 +40,7 @@ COPY packages/common/package.json ./packages/common/
 COPY packages/backend/package.json ./packages/backend/
 COPY yarn.lock ./
 # Only install dependencies used in production (exclude devDependencies)
-RUN yarn workspaces focus --production --all
+RUN yarn workspaces focus --production @ping-board/backend
 # The built application code is copied after installing the dependencies so we
 # don't run the install process every time we change something in the code
 # without touching the dependencies
