--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -13,8 +13,20 @@ on:
       - 'main'
 
 jobs:
+  lint:
+    runs-on: ubuntu-18.04
+    steps:
+      - uses: actions/checkout@v2.3.4
+      - uses: actions/setup-node@v2.4.0
+        with:
+          node-version: '14'
+          cache: yarn
+      - run: yarn workspaces focus ping-board @ping-board/frontend
+      - run: yarn workspace @ping-board/frontend lint
+
   build-docker:
     runs-on: ubuntu-18.04
+    needs: lint
     steps:
       - name: Checkout
         uses: actions/checkout@v2.3.4
