--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -27,7 +27,7 @@ jobs:
   build-docker:
     runs-on: ubuntu-18.04
     needs: lint
-    if: ${{ startsWith(github.ref, 'refs/tags/') }} # Only run for Tags
+    if: startsWith(github.ref, 'refs/tags/') # Only run for Tags
     steps:
       - name: Checkout
         uses: actions/checkout@v2.3.4
@@ -64,7 +64,7 @@ jobs:
   build:
     runs-on: ubuntu-18.04
     needs: lint
-    if: ${{ startsWith(github.ref, 'refs/tags/') }} # Only run for Tags
+    if: startsWith(github.ref, 'refs/tags/') # Only run for Tags
     steps:
       - name: Checkout
         uses: actions/checkout@v2.3.4
