--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -27,6 +27,7 @@ jobs:
   build-docker:
     runs-on: ubuntu-18.04
     needs: lint
+    if: startsWith(github.ref, 'refs/tags/') # Only run for Tags
     steps:
       - name: Checkout
         uses: actions/checkout@v2.3.4
@@ -63,6 +64,7 @@ jobs:
   build:
     runs-on: ubuntu-18.04
     needs: lint
+    if: startsWith(github.ref, 'refs/tags/') # Only run for Tags
     steps:
       - name: Checkout
         uses: actions/checkout@v2.3.4
