--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -18,7 +18,9 @@
   "dependencies": {
     "@koa/router": "^10.1.1",
     "@ping-board/common": "workspace:packages/common",
+    "@slack/web-api": "^6.4.0",
     "client-oauth2": "^4.3.3",
+    "dayjs": "^1.10.7",
     "http-errors": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.10",
