(backend) Include migrations and seeds in the build

--- a/packages/backend/tsconfig.json
+++ b/packages/backend/tsconfig.json
@@ -8,7 +8,10 @@
     "outDir": "build"
   },
   "include": [
-    "src/**/*"
+    "src/**/*",
+    "migrations/*",
+    "seeds/*",
+    "knexfile.ts"
   ],
   "references": [
     {
