Fix yarn dependency issues

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -7,8 +7,11 @@ plugins:
 yarnPath: .yarn/releases/yarn-berry.cjs
 
 packageExtensions:
-  react-scripts@*:
+  react-dev-utils@*:
     dependencies:
-      "sass-loader": "*"
+      "webpack": "*"
+    peerDependencies:
+      "typescript": "*"
+  react-scripts@*:
     peerDependencies:
       "sass": "*"
