--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@ping-board/common": "workspace:packages/common",
+    "@popperjs/core": "^2.10.2",
     "@reduxjs/toolkit": "^1.6.1",
     "bootstrap": "^5.1.0",
     "bootstrap-icons": "^1.5.0",
@@ -13,10 +14,12 @@
     "react-bootstrap": "next",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
-    "react-router-dom": "^5.2.1"
+    "react-router-dom": "^5.2.1",
+    "webpack": "^5.56.1"
   },
   "devDependencies": {
     "@craco/craco": "^6.2.0",
+    "@testing-library/dom": "^8.7.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -32,8 +35,12 @@
     "@types/testing-library__jest-dom": "^5",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "@typescript-eslint/parser": "^4.29.3",
+    "babel-eslint": "^10.1.0",
     "eslint": "^7.32.0",
     "eslint-config-react-app": "^6.0.0",
+    "eslint-plugin-flowtype": "^5.2.0",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.25.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "http-proxy-middleware": "^2.0.1",
