--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -10,9 +10,11 @@
     "bootstrap-icons": "^1.5.0",
     "clsx": "^1.1.1",
     "dayjs": "^1.10.6",
+    "fuse.js": "^6.4.6",
     "react": "^17.0.2",
     "react-bootstrap": "next",
     "react-dom": "^17.0.2",
+    "react-popper": "^2.2.5",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.1",
     "webpack": "^5.56.1"
