(CI) Fix backend build not including .yarnrc and yarn.lock files

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -94,6 +94,8 @@ jobs:
           path: |
             .pnp.cjs
             .yarn
+            .yarnrc.yml
+            yarn.lock
             package.json
             packages/backend/package.json
             packages/backend/build
