--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,17 +1,19 @@
+packageExtensions:
+  react-dev-utils@*:
+    dependencies:
+      webpack: "*"
+    peerDependencies:
+      typescript: "*"
+  react-scripts@*:
+    peerDependencies:
+      sass: "*"
+
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-typescript.cjs
     spec: "@yarnpkg/plugin-typescript"
   - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
     spec: "@yarnpkg/plugin-workspace-tools"
+  - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
+    spec: "@yarnpkg/plugin-interactive-tools"
 
 yarnPath: .yarn/releases/yarn-berry.cjs
-
-packageExtensions:
-  react-dev-utils@*:
-    dependencies:
-      "webpack": "*"
-    peerDependencies:
-      "typescript": "*"
-  react-scripts@*:
-    peerDependencies:
-      "sass": "*"
