(common) Update all outdated dependencies

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,12 +1,12 @@
 packageExtensions:
   react-dev-utils@*:
-    dependencies:
-      webpack: "*"
     peerDependencies:
-      typescript: "*"
-  react-scripts@*:
+      "typescript": "*"
+      "webpack": "*"
+  "@craco/craco@*":
     peerDependencies:
-      sass: "*"
+      "@types/node": "*"
+      "typescript": "*"
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-typescript.cjs
