--- a/packages/frontend/.yarnrc.yml
+++ b/packages/frontend/.yarnrc.yml
@@ -2,5 +2,7 @@ packageExtensions:
   react-scripts@*:
     dependencies:
       "sass-loader": "*"
+  "@craco/craco@*":
     peerDependencies:
-      "sass": "*"
+      "@types/node": "*"
+      "typescript": "*"
