(common) Fix package dependencies of react-scripts@*

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -3,6 +3,9 @@ packageExtensions:
     peerDependencies:
       "typescript": "*"
       "webpack": "*"
+  react-scripts@*:
+    peerDependencies:
+      sass: "*"
   "@craco/craco@*":
     peerDependencies:
       "@types/node": "*"
