--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -20,6 +20,7 @@
     "@ping-board/common": "workspace:packages/common",
     "@slack/web-api": "^6.6.0",
     "client-oauth2": "^4.3.3",
+    "cockatiel": "^3.0.0-beta.1",
     "dayjs": "^1.10.7",
     "http-errors": "^1.8.1",
     "jsonwebtoken": "^8.5.1",
